Add GitHub API integration and markdown export
Introduces a shared GitHub API module and utilities for parsing, formatting, and exporting issues and pull requests as markdown. Adds UI and logic for copying GitHub issues/PRs as markdown, including range selection via context menus. Updates browser extension manifests for GitHub API permissions, and adds a Personal Access Token input in the options page for higher API rate limits. Refactors content and background scripts to support new features.

--- a/src/presentation/options/index.html
+++ b/src/presentation/options/index.html
@@ -41,6 +41,21 @@
       </section>
 
       <section class="section">
+        <h2>GitHub</h2>
+
+        <div class="setting-row setting-row-column">
+          <div class="setting-info">
+            <label for="github-token">Personal Access Token (optional)</label>
+            <p class="setting-description">Recommended for higher API rate limits. Stored locally in the extension.</p>
+          </div>
+          <div class="token-row">
+            <input id="github-token" class="text-input" type="password" placeholder="ghp_..." autocomplete="off">
+            <button id="github-token-toggle" class="button secondary" type="button">Show</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="section">
         <h2>Appearance</h2>
 
         <div class="setting-row">
