Add commit diff export and smart diff mode options
Introduces new settings to include per-commit diffs and enable smart diff mode, which skips commit diffs fully reverted later in the PR. Updates the settings entity, repository, options UI, and dropdown controls to support these features. The markdown export logic and PR rendering are enhanced to handle commit diffs and smart diff filtering based on user preferences.

--- a/src/presentation/options/index.html
+++ b/src/presentation/options/index.html
@@ -81,6 +81,28 @@
             <span class="toggle-slider"></span>
           </label>
         </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label for="include-commit-diff-toggle">Include Commit Diffs</label>
+            <p class="setting-description">Include per-commit diff patches in the export</p>
+          </div>
+          <label class="toggle">
+            <input type="checkbox" id="include-commit-diff-toggle">
+            <span class="toggle-slider"></span>
+          </label>
+        </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label for="smart-diff-mode-toggle">Smart Diff Mode</label>
+            <p class="setting-description">Skip commit diffs that are fully reverted later in the PR</p>
+          </div>
+          <label class="toggle">
+            <input type="checkbox" id="smart-diff-mode-toggle">
+            <span class="toggle-slider"></span>
+          </label>
+        </div>
       </section>
 
       <section class="section">
