--- a/src/presentation/options/index.html
+++ b/src/presentation/options/index.html
@@ -103,6 +103,28 @@
             <span class="toggle-slider"></span>
           </label>
         </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label for="only-review-comments-toggle">Only Review Comments</label>
+            <p class="setting-description">PR only: export only inline review comments</p>
+          </div>
+          <label class="toggle">
+            <input type="checkbox" id="only-review-comments-toggle">
+            <span class="toggle-slider"></span>
+          </label>
+        </div>
+
+        <div class="setting-row">
+          <div class="setting-info">
+            <label for="ignore-resolved-comments-toggle">Ignore Resolved Comments</label>
+            <p class="setting-description">PR only: skip review comments in resolved threads</p>
+          </div>
+          <label class="toggle">
+            <input type="checkbox" id="ignore-resolved-comments-toggle">
+            <span class="toggle-slider"></span>
+          </label>
+        </div>
       </section>
 
       <section class="section">
