--- a/src/presentation/popup/index.html
+++ b/src/presentation/popup/index.html
@@ -16,9 +16,16 @@
       <section class="section">
         <h2>Status</h2>
         <div class="status-row">
-          <span>Extension</span>
+          <span>Pull Requests</span>
           <label class="toggle">
-            <input type="checkbox" id="enabled-toggle">
+            <input type="checkbox" id="pr-enabled-toggle">
+            <span class="toggle-slider"></span>
+          </label>
+        </div>
+        <div class="status-row">
+          <span>Issues</span>
+          <label class="toggle">
+            <input type="checkbox" id="issue-enabled-toggle">
             <span class="toggle-slider"></span>
           </label>
         </div>
